--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/css/normalize.css">
   <!--
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="/css/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
-
-  <title></title>
+<title></title>
 </head>
 <body>
+  <header>
+    <% unless request.url == 'http://localhost:9393/' %>
+      <a href='/'>Home</a>
+    <% end %>
+    <div id="logout">
+      <% if current_user %>
+       <a href='/session/logout'>Log out</a>
+      <% end %>
+  </header>
+    </div>
   <%= yield %>
+  <footer>
+    <p>By Eiko Seino - 2014</p>
+  </footer>
 </body>
 </html>
